Made navbar thinner, to fix resume button alignment

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html {
 /* TOP NAVIGATION */
 .top-nav {
   background-color: rgba(26, 26, 26, 0.85);
-  padding: 0.7rem 2rem;
+  padding: 0.5rem 2rem;
   display: flex;
   justify-content: flex-end;
   align-items: center;
